image resizer added

--- a/tools/templates/basic.html
+++ b/tools/templates/basic.html
@@ -53,6 +53,7 @@
                         
                         <li><a href="#">Domain Tools</a>
                             <ul>
+                                <li><a href="{% url 'domain_name' %}">Domain Name Generator</a></li>
                                 <li><a href="{% url 'domain_age' %}">Domain Age Checker</a></li>
                                 <li><a href="{% url 'whois' %}">Whois Checker</a></li>
                                 <li><a href="{% url 'myip' %}">my IP</a></li>
