--- a/tools/templates/basic.html
+++ b/tools/templates/basic.html
@@ -25,6 +25,7 @@
                                 <li><a href="{% url 'word_count' %}">Word Count</a></li>
                                 <li><a href="{% url 'password_generator' %}">Password Generator</a></li>
                                 <li><a href="{% url 'password_strength' %}">Password Strength</a></li>
+                                <li><a href="{% url 'md5' %}">MD5 Generator</a></li>
                             </ul>
                         
                         </li>
